# flask

./: .gitignore  README.md  app.py  diobank.sqlite  pyproject.toml
dio_bank/: README.md
dio_bank/src/: README.md  app.py  db.py  utils.py
dio_bank/src/controllers/: auth.py  post.py  role.py  user.py
dio_bank/tests/: test_utils.py
dio_bank/tests/integration/: conftest.py
dio_bank/tests/integration/controllers/: test_user.py
dio_bank/tests/unit/: test_utils.py
instance/: blog.sqlite
migrations/versions/: 612fc91c0dfa_initial_migration.py  9a901a289380_initial_migration_with_fk_names.py  d46cf3031774_add_active_attr_in_user2.py  e456d05c26d3_add_password_field.py
