[tool.poetry]
name = "desenvolvimento-de-apis-flask"
version = "0.1.0"
description = "API Flask de exemplo"
authors = ["Patrícia Gheller <patricia.gheller.1985@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <4"
flask = "^3.1.2"
flask-sqlalchemy = "*"
flask-migrate = "*"
flask-jwt-extended = "^4.7.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)"
]
